--- a/src/components/marketing/announcement-bar/AnnouncementBar.module.css
+++ b/src/components/marketing/announcement-bar/AnnouncementBar.module.css
@@ -32,7 +32,7 @@
 }
 
 .separator {
-  color: rgba(244, 244, 242, 0.35);
+  color: rgba(244, 244, 242, 0.65);
 }
 
 .action {
